--- a/frontend/cookbook/package.json
+++ b/frontend/cookbook/package.json
@@ -10,9 +10,12 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "js-file-download": "^0.4.12",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-draft-wysiwyg": "^1.14.7",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
