--- a/frontend/cookbook/package.json
+++ b/frontend/cookbook/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^31.1.0",
+    "@ckeditor/ckeditor5-font": "^31.1.0",
     "@ckeditor/ckeditor5-react": "^3.0.3",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
